# compilers

./: ASD.txt  CMakeLists.txt  example.c  foo.h  list.c  list.h  main.c  parse_unit.c  parse_unit.h  traversal.c
code-generator/c/: list.h  parse_unit.c  parse_unit.h
code-generator/c/test/: source.c  test_settings.json
code-generator/c/test/include/: header.h
code-generator/info/: python_new.txt
code-generator/python/oop/: generator.py  main.py  settings.json
code-generator/python/oop/modules/: __init__.py  container.py  context.py  debug.py  handler.py  kind.py  kinds.py  parser.py  wrapper.py  writer.py
code-generator/python/oop/tests/: generated.py  settings.json  tests.py
code-generator/python/oop/tests/samples/: _source.c  source.c
code-generator/python/oop/tests/samples/include/: header.h  helper.h  skip.h
code-generator/python/procedure/: generator.py  requirements.txt  setting.json
environment/: clang_windows+vscode.txt  cmake_all.txt  gtest_windows.txt  mingw_windows.txt
examples/: unit.c
examples/include/: header.h
examples/include/include2/: header2.h
faq/clang/: clang_windows_vscode.txt
info/: clang_options.txt  python_new.txt
python/: generator.py  main.py  settings.json  temp.py  test.py  test_wrapper.py  wrapper.py
python/modules/: context.py  main.py
python/modules/tests/: settings.json  tests.py
test/: source.c  test_settings.json
test/include/: header.h
